--- a/veterinaria-solidaria-app/src/app/shared/navbar/navbar.component.html
+++ b/veterinaria-solidaria-app/src/app/shared/navbar/navbar.component.html
@@ -9,10 +9,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"> Cuentas </a>
+                    <!-- <a class="nav-link active" aria-current="page" href="#"> Cuentas </a> -->
                 </li>
-                
-                
+            </ul>
+            <ul class="menu">
+
+                <li> <a href="index.html">Inicio</a></li>
+                <li> <a href="#">Productos</a></li>
+                <li> <a href="#">Clientes</a></li>
+                <li> <a href="#">Compras</a></li>
+                <li> <a href="app/ventas/ventas.component.html">Ventas</a></li>
+                <li> <a href="#">Salir</a></li>
+            
             </ul>
             <span class="navbar-text float-end">
                 <button class="btn btn-danger"> <i class="fas fa-sign-out-alt"></i> Salir </button>
