--- a/veterinaria-solidaria-app/src/app/shared/footer/footer.component.html
+++ b/veterinaria-solidaria-app/src/app/shared/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+
+<footer class="footer bg-dark text-center">
+        
+             <div class="container py-2">
+
+                <a target="_blank" class="text-white my-2" href="https://pichidegua.cl/">I. Municipalidad de Pichidegua</a>
+
+
+             </div>    
+                        
+       
+</footer>
+
