--- a/veterinaria-solidaria-app/src/app/shared/navbar/navbar.component.html
+++ b/veterinaria-solidaria-app/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="assets/logo.png" alt="" height="50">
+            <img src="" alt="" height="50">
         </a>    
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,12 +14,12 @@
             </ul>
             <ul class="menu">
 
-                <li> <a href="index.html">Inicio</a></li>
-                <li> <a href="#">Productos</a></li>
-                <li> <a href="#">Clientes</a></li>
-                <li> <a href="#">Compras</a></li>
-                <li> <a href="app/ventas/ventas.component.html">Ventas</a></li>
-                <li> <a href="#">Salir</a></li>
+                <li> <a href="#">Inicio</a></li>
+                <li> <a href="#/admin/productos">Productos</a></li>
+                <li> <a href="#/admin/clientes">Clientes</a></li>
+                <li> <a href="#/admin/compras">Compras</a></li>
+                <li> <a href="#/admin/ventas">Ventas</a></li>
+
             
             </ul>
             <span class="navbar-text float-end">
