--- a/veterinaria-solidaria-app/src/app/admin/productos/productos.component.html
+++ b/veterinaria-solidaria-app/src/app/admin/productos/productos.component.html
@@ -1,34 +1,39 @@
-<h1>Administrar Ventas</h1>
+<h1>Administrar Productos</h1>
 
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
   
       <!-- Position Column -->
-      <ng-container matColumnDef="idventa">
-        <th mat-header-cell *matHeaderCellDef> Id.Venta </th>
+      <ng-container matColumnDef="codigoprod">
+        <th mat-header-cell *matHeaderCellDef> Código producto </th>
         <td mat-cell *matCellDef="let element"> {{element.position}} </td>
       </ng-container>
   
       <!-- Name Column -->
-      <ng-container matColumnDef="fecha">
-        <th mat-header-cell *matHeaderCellDef> Fecha </th>
+      <ng-container matColumnDef="tipo">
+        <th mat-header-cell *matHeaderCellDef> Tipo </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
   
       <!-- Weight Column -->
-      <ng-container matColumnDef="total">
-        <th mat-header-cell *matHeaderCellDef> Total </th>
+      <ng-container matColumnDef="nombreprod">
+        <th mat-header-cell *matHeaderCellDef> Nombre producto </th>
         <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
       </ng-container>
   
       <!-- Symbol Column -->
-      <ng-container matColumnDef="formapago">
-        <th mat-header-cell *matHeaderCellDef> Forma de pago </th>
+      <ng-container matColumnDef="precio">
+        <th mat-header-cell *matHeaderCellDef> Precio </th>
         <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="ntransaccion">
-        <th mat-header-cell *matHeaderCellDef> N° Transacción </th>
+      <ng-container matColumnDef="stock">
+        <th mat-header-cell *matHeaderCellDef> Stock </th>
+        <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="descripcion">
+        <th mat-header-cell *matHeaderCellDef> Descripción </th>
         <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
       </ng-container>
 
